Updated pages based on Thursday's feedback
- Responsiveness
- Font change
- Tile changes
- Removed hero banners that were not homepage

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -22,6 +22,21 @@
 	src: url('../fonts/SuisseIntl-Regular.otf') format('opentype');
 }
 
+@font-face {
+	font-family: 'Styrene-Light';
+	font-weight: normal;
+	font-style: normal;
+	src: url('../fonts/StyreneAWeb-Light.woff') format('woff');
+}
+
+@font-face {
+	font-family: 'Styrene-Regular';
+	font-weight: normal;
+	font-style: normal;
+	src: url('../fonts/StyreneAWeb-Regular.woff') format('woff');
+}
+
+
 
 
 
